feat: SJRA-147 interpreted and uninterpreted cases endpoints
