# backend/internal/types/term.go
@@ -8,6 +8,7 @@ type AutoCompleteTerm struct {
 type Term struct {
 	ID   string `json:"id,omitempty"`
 	Name string `json:"name,omitempty"`
+	Term string `json:"term,omitempty"`
 }
 
 var MondoTable = Table{
@@ -18,4 +19,58 @@ var MondoTable = Table{
 var HPOTable = Table{
 	Name:  "hpo_term",
 	Alias: "hpo",
+}
+
+var ConditionIdField = Field{
+	Name:          "id",
+	Alias:         "condition_id",
+	CanBeSelected: true,
+	CanBeSorted:   true,
+	CanBeFiltered: true,
+	Table:         MondoTable,
+}
+
+var ConditionNameField = Field{
+	Name:          "name",
+	Alias:         "condition_name",
+	CanBeSelected: true,
+	CanBeSorted:   true,
+	CanBeFiltered: true,
+	Table:         MondoTable,
+}
+
+var ConditionTermField = Field{
+	Name:          "term",
+	Alias:         "condition_term",
+	CanBeSelected: true,
+	CanBeSorted:   true,
+	CanBeFiltered: true,
+	Table:         MondoTable,
+}
+
+var PhenotypeIdField = Field{
+	Name:          "id",
+	Alias:         "phenotype_id",
+	CanBeSelected: true,
+	CanBeSorted:   true,
+	CanBeFiltered: true,
+	Table:         HPOTable,
+}
+
+var PhenotypeNameField = Field{
+	Name:          "name",
+	Alias:         "phenotype_name",
+	CanBeSelected: true,
+	CanBeSorted:   true,
+	CanBeFiltered: true,
+	Table:         HPOTable,
+}
+
+var PhenotypeTermField = Field{
+	Name:          "term",
+	Alias:         "phenotype_term",
+	CanBeSelected: true,
+	CanBeSorted:   true,
+	CanBeFiltered: true,
+	Table:         HPOTable,
 }
